Cambios en el get_dependencies

--- a/main.ipynb
+++ b/main.ipynb
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "id": "kGF500MrQoO4"
       },
@@ -63,7 +63,9 @@
         "dataset_id = 'giovanijazin/birds-penguins-and-flamingo'\n",
         "zip_filename = 'birds-penguins-and-flamingo.zip'\n",
         "dataset_name = 'birds-penguins-and-flamingo'\n",
-        "yaml_path = \"./datasets/birds-penguins-and-flamingo/data.yaml\""
+        "yaml_path = \"./datasets/birds-penguins-and-flamingo/data.yaml\"\n",
+        "id_file = \"1_57rJzP3h8k9V893Lt8XnkV9ZvSCpZ7H\"\n",
+        "drive_filename = \"project.zip\"\n"
       ]
     },
     {
@@ -79,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "CfuhcjfdQoO5"
       },
@@ -152,6 +154,113 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "\n",
+        "def get_dependencies(id_file: str, drive_filename: str):\n",
+        "    \"\"\"\n",
+        "    Descarga un archivo ZIP de Google Drive, lo descomprime en una carpeta temporal\n",
+        "    ('project'), mueve su contenido a la raíz y limpia la carpeta temporal.\n",
+        "    \n",
+        "    Args:\n",
+        "        id_file (str): ID del archivo ZIP en Google Drive.\n",
+        "        drive_filename (str): Nombre del archivo ZIP esperado (ej: 'dataset.zip').\n",
+        "    \"\"\"\n",
+        "    \n",
+        "    extract_path = \"project\"\n",
+        "    \n",
+        "    # 1. VERIFICACIÓN Y DESCARGA (Usando subprocess para gdown)\n",
+        "    try: \n",
+        "        if os.path.exists(drive_filename):\n",
+        "            print(f\"✅ Archivo '{drive_filename}' ya ha sido descargado. Omite descarga.\")\n",
+        "        else:\n",
+        "            print(f\"Descargando el archivo con ID: {id_file}...\")\n",
+        "            \n",
+        "            # Ejecutar gdown. -O $drive_filename especifica el nombre del archivo de salida\n",
+        "            subprocess.run(\n",
+        "                ['gdown', '--id', id_file, '-O', drive_filename],\n",
+        "                check=True,  # Lanza un error si gdown falla\n",
+        "                capture_output=True,\n",
+        "                text=True\n",
+        "            )\n",
+        "            print(\"✅ Descarga de Google Drive completada.\")\n",
+        "\n",
+        "    except subprocess.CalledProcessError as e:\n",
+        "        print(f\"❌ ERROR al descargar el archivo de Drive (ID: {id_file}).\")\n",
+        "        print(\"   Verifica que el ID sea correcto y que gdown esté instalado.\")\n",
+        "        print(f\"   Salida de error: {e.stderr}\")\n",
+        "        return # Salir si la descarga falla\n",
+        "        \n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ ERROR general en la descarga: {e}\")\n",
+        "        return # Salir si la descarga falla\n",
+        "\n",
+        "    if not drive_filename.lower().endswith(\".zip\"):\n",
+        "        return\n",
+        "    # 2. DESCOMPRIMIR\n",
+        "    try:\n",
+        "        if not os.path.exists(extract_path):\n",
+        "            os.makedirs(extract_path, exist_ok=True)\n",
+        "            \n",
+        "        print(f\"Descomprimiendo '{drive_filename}' en '{extract_path}'...\")\n",
+        "        with zipfile.ZipFile(drive_filename, 'r') as zip_ref:\n",
+        "            zip_ref.extractall(extract_path)\n",
+        "        print(\"✅ Archivo zip descomprimido exitosamente.\")\n",
+        "        \n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Error al descomprimir el archivo zip: {e}\")\n",
+        "        return\n",
+        "\n",
+        "    #? 3. MOVER CONTENIDOS A LA RAÍZ Y LIMPIEZA\n",
+        "    \n",
+        "    # Verificamos si la carpeta temporal tiene subcarpetas (común en ZIPs)\n",
+        "    contents = os.listdir(extract_path)\n",
+        "    if len(contents) == 1 and os.path.isdir(os.path.join(extract_path, contents[0])):\n",
+        "        # Si el ZIP extrajo solo una subcarpeta (ej: 'dataset_name/'), movemos desde dentro de esa subcarpeta\n",
+        "        source_dir = os.path.join(extract_path, contents[0])\n",
+        "    else:\n",
+        "        # Si el ZIP extrajo los archivos directamente en 'project/'\n",
+        "        source_dir = extract_path\n",
+        "\n",
+        "    print(f\"Moviendo contenidos de {source_dir} a la raíz del proyecto...\")\n",
+        "    \n",
+        "    try:\n",
+        "        for item in os.listdir(source_dir):\n",
+        "            s = os.path.join(source_dir, item)\n",
+        "            d = os.path.join(\".\", item) # Mover al directorio actual (raíz)\n",
+        "            \n",
+        "            # Usar rename es más eficiente que move/copy si es posible\n",
+        "            shutil.move(s, d) \n",
+        "            \n",
+        "        print(\"✅ Contenidos movidos exitosamente.\")\n",
+        "        \n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Error al mover los archivos: {e}\")\n",
+        "        # Intentamos seguir, pero los archivos pueden estar en la carpeta 'project'\n",
+        "\n",
+        "    # 4. BORRAR CARPETA TEMPORAL\n",
+        "    # Borramos la carpeta temporal (y la posible subcarpeta que haya quedado)\n",
+        "    try:\n",
+        "        if os.path.exists(extract_path):\n",
+        "            shutil.rmtree(extract_path)\n",
+        "            print(f\"✅ Carpeta temporal '{extract_path}' eliminada.\")\n",
+        "            \n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Error al eliminar la carpeta temporal '{extract_path}': {e}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "UPZN1XpvQoO6"
@@ -162,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "NsUxM-eXQoO6"
       },
@@ -225,6 +334,29 @@
         "                #? Si el sistenma operativo no es Windows\n",
         "                if os.name != 'nt':\n",
         "                    os.chmod(dest_file, 0o600)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✅ Archivo 'project.zip' ya ha sido descargado. Omite descarga.\n",
+            "Descomprimiendo 'project.zip' en 'project'...\n",
+            "✅ Archivo zip descomprimido exitosamente.\n",
+            "Moviendo contenidos de project a la raíz del proyecto...\n",
+            "❌ Error al mover los archivos: Destination path '.\\project\\project' already exists\n",
+            "✅ Carpeta temporal 'project' eliminada.\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "get_dependencies(id_file, drive_filename)"
       ]
     },
     {
@@ -4874,7 +5006,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "yolo-gpu",
       "language": "python",
       "name": "python3"
     },
@@ -4888,7 +5020,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.12"
+      "version": "3.11.14"
     }
   },
   "nbformat": 4,
