Cambios en la estructura del código para llamar funciones

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,31 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "21_wiSY1Qwsv",
-        "outputId": "9eaea138-2a31-4110-97a9-4480e90cbccf"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install -r requirements.txt"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -38,7 +14,6 @@
       "source": [
         "\n",
         "#! Todos los Imports del proyecto\n",
-        "from ultralytics import YOLO\n",
         "import shutil\n",
         "import getpass\n",
         "import sys\n",
@@ -52,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {
         "id": "kGF500MrQoO4"
       },
@@ -338,38 +313,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "✅ Archivo 'project.zip' ya ha sido descargado. Omite descarga.\n",
-            "Descomprimiendo 'project.zip' en 'project'...\n",
-            "✅ Archivo zip descomprimido exitosamente.\n",
-            "Moviendo contenidos de project a la raíz del proyecto...\n",
-            "❌ Error al mover los archivos: Destination path '.\\project\\project' already exists\n",
-            "✅ Carpeta temporal 'project' eliminada.\n"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "get_dependencies(id_file, drive_filename)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125
-        },
-        "id": "VKsBooFJu_Rp",
-        "outputId": "66ff23f0-2837-42fa-e171-8401d4fc40ad"
-      },
       "outputs": [
         {
           "name": "stdout",
@@ -380,12 +325,17 @@
         }
       ],
       "source": [
-        "kaggle_setup()"
+        "try:\n",
+        "    get_dependencies(file_id, drive_filename)\n",
+        "    print(\"Archivos descargados éxitosamente.\")\n",
+        "    !pip install -r requiremnts.txt\n",
+        "except:\n",
+        "        kaggle_setup()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -393,15 +343,7 @@
         "id": "1B7BT2S_QoO6",
         "outputId": "5fd6743b-15d9-4356-9170-8a76186e59d3"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from IPython.utils.capture import capture_output\n",
         "from kaggle.api.kaggle_api_extended import KaggleApi\n",
@@ -464,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -477,56 +419,21 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Descargando el dataset...\n",
-            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\n",
-            "Dataset URL: https://www.kaggle.com/datasets/giovanijazin/birds-penguins-and-flamingo\n",
-            "Dataset 'birds-penguins-and-flamingo.zip' descargado correctamente.\n",
-            "Dataset descargado correctamente.\n"
+            "Entorno: local\n",
+            "Ruta de extracción: g:\\Otros ordenadores\\TARTANGA\\IABD\\Recognition-and-classification-YOLO-\\datasets\\birds-penguins-and-flamingo\n",
+            "El archivo zip ya ha sido descomprimido.\n"
           ]
         }
       ],
       "source": [
-        "dataset_request(dataset_id, zip_filename)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        },
-        "id": "hOu1dCOgQoO7",
-        "outputId": "6fc6599c-1ac6-4f7b-c486-65d359b15b54"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Entorno: colab\n",
-            "Ruta de extracción: /content/datasets/birds-penguins-and-flamingo\n",
-            "Descomprimiendo el archivo zip...\n",
-            "Archivo zip descomprimido exitosamente.\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'/content/datasets/birds-penguins-and-flamingo'"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "path_builder(zip_filename, dataset_name)"
+        "\n",
+        "try:\n",
+        "    if not os.path.exists(zip_filename):\n",
+        "        dataset_request(dataset_id, zip_filename)\n",
+        "    \n",
+        "    path_builder(zip_filename, dataset_name)\n",
+        "except Exception as e:\n",
+        "    print(f\"Error al descargar el dataset: {e}\")\n"
       ]
     },
     {
@@ -542,14 +449,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "CUBCsvqSKRZ6"
       },
       "outputs": [],
       "source": [
         "import yaml\n",
-        "\n",
+        "from ultralytics import YOLO\n",
         "data = {\n",
         "    'path': './datasets/birds-penguins-and-flamingo',\n",
         "    'train': 'train/images',\n",
