Cambios en el comparador de métricas

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "mjswqNanQoO3"
       },
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "kGF500MrQoO4"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "CfuhcjfdQoO5"
       },
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "MwYwhO91-Ux2"
       },
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "5zHnjy62-Ux2"
       },
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "NsUxM-eXQoO6"
       },
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "6o4LCUKI-Ux3",
         "outputId": "e8883a38-06b2-4763-9caf-587c7c0beb5e",
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "1B7BT2S_QoO6"
       },
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "CUBCsvqSKRZ6"
       },
@@ -636,12 +636,12 @@
       "metadata": {
         "id": "21-wLbgrjyIQ"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1001,7 +1001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1035,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1067,7 +1067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1103,7 +1103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1133,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1168,7 +1168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1193,7 +1193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1220,7 +1220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1293,7 +1293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "2EAWS5fpK3C6"
       },
@@ -1346,7 +1346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1385,7 +1385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1421,7 +1421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1722,7 +1722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1885,7 +1885,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "aRiSFHNpYIS6"
       },
@@ -1896,7 +1896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2460,7 +2460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2485,7 +2485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "9kxkYhefiC8n"
       },
@@ -2497,7 +2497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2951,7 +2951,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "bhG_5M6xal-o"
       },
@@ -2962,7 +2962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3672,7 +3672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3697,7 +3697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3962,7 +3962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "LmMdFo4LbN9t"
       },
@@ -3974,7 +3974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -4540,6 +4540,48 @@
       ],
       "metadata": {
         "id": "N3hLiytv4nH0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Supongamos que tus funciones get_metrics y metrics_compare ya están definidas arriba\n",
+        "\n",
+        "def save_model_comparison(model_id, csv_filename=\"comparativa_modelos.csv\"):\n",
+        "    # 1. Intentar cargar el historial existente\n",
+        "    if os.path.exists(csv_filename):\n",
+        "        df_global = pd.read_csv(csv_filename)\n",
+        "    else:\n",
+        "        df_global = pd.DataFrame()\n",
+        "\n",
+        "    # 2. Extraer métricas del nuevo modelo\n",
+        "    new_metrics = get_metrics(model_id)\n",
+        "\n",
+        "    # Validar que no venga vacío (por errores en get_metrics)\n",
+        "    if new_metrics.empty:\n",
+        "        print(\"No se pudieron obtener métricas. Abortando guardado.\")\n",
+        "        return\n",
+        "\n",
+        "    # 3. Usar tu función para comparar y agregar\n",
+        "    df_global = metrics_compare(new_metrics, df_global)\n",
+        "\n",
+        "    # 4. Guardar el resultado final en el CSV\n",
+        "    df_global.to_csv(csv_filename, index=False)\n",
+        "    print(f\"Historial actualizado en: {csv_filename}\")\n",
+        "\n",
+        "# --- Ejemplo de uso ---\n",
+        "lista_de_modelos = [\"train1\", \"train2\", \"train3\"]\n",
+        "\n",
+        "for mid in lista_de_modelos:\n",
+        "    save_model_comparison(mid)"
+      ],
+      "metadata": {
+        "id": "S0RrXtyQDj-F"
       },
       "execution_count": null,
       "outputs": []
